<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- Imagen decorativa para coleccionistas -->
    <ImageView
        android:id="@+id/collectorImage"
        android:layout_width="371dp"
        android:layout_height="367dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-159dp"
        android:layout_marginEnd="-154dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/HU00_title"
        android:scaleType="centerCrop"
        android:src="@drawable/vinyl" />

    <ScrollView
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:scrollbarStyle="insideOverlay"
        android:scrollbarThumbVertical="@drawable/custom_scrollbar_thumb"
        android:scrollbarTrackVertical="@drawable/custom_scrollbar_track">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Título -->
            <TextView
                android:id="@+id/collectorTitle"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:layout_marginTop="66dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/roboto_condensed_light"
                android:gravity="start"
                android:paddingStart="10dp"
                android:paddingEnd="1dp"
                android:text="@string/title_list_collectors"
                android:textAllCaps="true"
                android:textSize="34sp" />

            <!-- Etiqueta del contador de coleccionistas -->
            <TextView
                android:id="@+id/totalCollectorsTextView"
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="111dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/roboto_condensed_light_italic"
                android:gravity="start"
                android:paddingStart="10dp"
                android:paddingEnd="1dp"
                android:text="@string/total_collectors"
                android:textAllCaps="true"
                android:textSize="14sp" />

            <!-- Campo de búsqueda para coleccionistas -->
            <EditText
                android:id="@+id/searchCollectorEditText"
                android:layout_width="152dp"
                android:layout_height="20dp"
                android:layout_below="@id/totalCollectorsTextView"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="16dp"
                android:autofillHints="name"
                android:background="@drawable/rounded_edit_text_background"
                android:fontFamily="@font/roboto_condensed_light"
                android:hint="@string/search_collector_hint"
                android:inputType="text"
                android:paddingStart="2dp"
                android:paddingEnd="1dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="12sp"
                android:drawableStart="@drawable/ic_search_small"
                android:drawablePadding="3dp"/>

            <!-- Botón para agregar coleccionista -->
            <Button
                android:id="@+id/addCollectorButton"
                android:layout_width="152dp"
                android:layout_height="26dp"
                android:layout_below="@id/searchCollectorEditText"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/black_button_background"
                android:fontFamily="@font/roboto_condensed_medium"
                android:padding="0dp"
                android:text="@string/add_collector"
                android:textSize="12sp"
                style="?attr/buttonStyle"/>

            <!-- Icono de carga animado -->
            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />

            <!-- Lista de coleccionistas -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/collectorsRv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/progressBar"
                android:layout_below="@id/addCollectorButton"
                tools:listitem="@layout/collector_item" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>