<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Vinyl image -->
    <ImageView
        android:id="@+id/vinylImage"
        android:layout_width="371dp"
        android:layout_height="367dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-159dp"
        android:layout_marginEnd="-154dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/HU00_title"
        android:scaleType="centerCrop"
        android:src="@drawable/vinyl" />

    <ScrollView
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:scrollbarStyle="insideOverlay"
        android:scrollbarThumbVertical="@drawable/custom_scrollbar_thumb"
        android:scrollbarTrackVertical="@drawable/custom_scrollbar_track">

        <RelativeLayout android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Title -->
            <TextView
                android:id="@+id/artistTitle"
                android:layout_width="152dp"
                android:layout_height="44dp"
                android:layout_marginTop="66dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/roboto_condensed_light"
                android:gravity="start"
                android:paddingStart="10dp"
                android:paddingEnd="1dp"
                android:text="@string/title_artist"
                android:textAllCaps="true"
                android:textSize="34sp" />

            <!-- Albums Counter Label -->
            <TextView
                android:id="@+id/totalArtistsTextView"
                android:layout_width="155dp"
                android:layout_height="16dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="111dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/roboto_condensed_light_italic"
                android:gravity="start"
                android:paddingStart="10dp"
                android:paddingEnd="1dp"
                android:text="@string/total_artists"
                android:textAllCaps="true"
                android:textSize="14sp" />

            <!-- Search field -->
            <EditText
                android:id="@+id/searchArtistEditText"
                android:layout_width="152dp"
                android:layout_height="20dp"
                android:layout_below="@id/totalArtistsTextView"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="16dp"
                android:autofillHints="name"
                android:background="@drawable/rounded_edit_text_background"
                android:fontFamily="@font/roboto_condensed_light"
                android:hint="@string/search_album_hint"
                android:inputType="text"
                android:paddingStart="2dp"
                android:paddingEnd="1dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="12sp"
                android:drawableStart="@drawable/ic_search_small"
                android:drawablePadding="3dp"/>

            <!-- Load icon animation -->
            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />

            <!-- List of albums -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/artistRv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/progressBar"
                tools:listitem="@layout/artist_item" >
            </androidx.recyclerview.widget.RecyclerView>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>