<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <!-- Vinyl image -->
    <ImageView
        android:id="@+id/vinylImage"
        android:layout_width="371dp"
        android:layout_height="367dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-159dp"
        android:layout_marginEnd="-154dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/HU00_title"
        android:scaleType="centerCrop"
        android:src="@drawable/vinyl" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:scrollbarStyle="insideOverlay"
        android:scrollbarThumbVertical="@drawable/custom_scrollbar_thumb"
        android:scrollbarTrackVertical="@drawable/custom_scrollbar_track"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        xmlns:tools="http://schemas.android.com/tools">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Go Back Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/goBack"
                android:layout_width="130dp"
                android:layout_height="26dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/red_button_background"
                android:fontFamily="@font/roboto_condensed_medium"
                android:padding="0dp"
                android:text="@string/go_back_button"
                android:textSize="12sp"
                style="@style/RedButtonStyle"/>

            <!-- Collector Name -->
            <TextView
                android:id="@+id/collectorName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto_condensed_light"
                android:gravity="start"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textAllCaps="true"
                android:textSize="24sp"
                android:textColor="@color/black" />

            <!-- Collector Bio -->
            <TextView
                android:id="@+id/collectorBio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_condensed_regular"
                android:gravity="start"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:textSize="14sp"
                android:textColor="@color/gray" />

            <!-- Add Album Button -->
            <Button
                android:id="@+id/addAlbumButton"
                android:layout_width="152dp"
                android:layout_height="26dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:padding="0dp"
                android:background="@drawable/black_button_background"
                android:fontFamily="@font/roboto_condensed_medium"
                android:text="@string/add_album"
                android:textSize="12sp"
                android:layout_gravity="start"
                style="?attr/buttonStyle"/>

            <!-- Divider -->
            <View
                android:id="@+id/horizontal_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/orange"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>

            <!-- Table header -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:id="@+id/tracksId"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/id_tracks_table"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:paddingStart="22dp"
                    android:paddingEnd="10dp" />

                <TextView
                    android:id="@+id/tracks_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/albums_title_header"
                    android:textSize="16sp"
                    android:textColor="@color/black" />

                <ImageView
                    android:id="@+id/clockIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_clock"
                    android:contentDescription="@string/duration"
                    android:layout_marginStart="8dp"
                    android:paddingEnd="26dp"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>

            <!-- Divider -->
            <View
                android:id="@+id/horizontal_line2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/orange"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="1dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>

            <!-- RecyclerView to show list of albums -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/album_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
